[gd_scene load_steps=8 format=3 uid="uid://bmu5mjh3a65t2"]

[ext_resource type="Texture2D" uid="uid://1xps7kycymk2" path="res://art/background.png" id="1_ix3g0"]
[ext_resource type="Script" uid="uid://7amx2dnihu1a" path="res://scenes/blind/blind.gd" id="1_pcol3"]
[ext_resource type="PackedScene" uid="uid://cqddt278wal78" path="res://scenes/playing_card_ui.tscn" id="2_8asx0"]
[ext_resource type="Script" uid="uid://cwb88whmkdchm" path="res://scenes/blind/hand.gd" id="3_quq1t"]
[ext_resource type="Resource" uid="uid://cqu0dkiv5v1mm" path="res://test_resources/test_playing_card.tres" id="4_sl2xd"]
[ext_resource type="Script" uid="uid://dxytpi6gpwkdh" path="res://scenes/blind/card_play_area.gd" id="5_s3l8s"]
[ext_resource type="Script" uid="uid://cfr0qks5ifkf6" path="res://scenes/blind/score.gd" id="6_n7sra"]

[node name="Blind" type="Node2D"]
script = ExtResource("1_pcol3")
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.12598425, 0.12621196)
texture = ExtResource("1_ix3g0")
centered = false

[node name="BlindUI" type="CanvasLayer" parent="."]

[node name="Hand" type="HBoxContainer" parent="BlindUI"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = 21.0
offset_right = 75.0
offset_bottom = 51.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
script = ExtResource("3_quq1t")

[node name="PlayingCardUI" parent="BlindUI/Hand" instance=ExtResource("2_8asx0")]
layout_mode = 2
card = ExtResource("4_sl2xd")

[node name="PlayingCardUI2" parent="BlindUI/Hand" instance=ExtResource("2_8asx0")]
layout_mode = 2
card = ExtResource("4_sl2xd")

[node name="PlayingCardUI3" parent="BlindUI/Hand" instance=ExtResource("2_8asx0")]
layout_mode = 2
card = ExtResource("4_sl2xd")

[node name="PlayingCardUI4" parent="BlindUI/Hand" instance=ExtResource("2_8asx0")]
layout_mode = 2
card = ExtResource("4_sl2xd")

[node name="PlayingCardUI5" parent="BlindUI/Hand" instance=ExtResource("2_8asx0")]
layout_mode = 2
card = ExtResource("4_sl2xd")

[node name="CardPlayArea" type="HBoxContainer" parent="BlindUI"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -29.0
offset_right = 20.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_s3l8s")

[node name="Control" type="Control" parent="BlindUI"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -19.0
offset_right = 55.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="BlindUI/Control"]
layout_mode = 0
offset_top = 1.0
offset_right = 205.0
offset_bottom = 32.0
scale = Vector2(0.5, 0.5)
alignment = 1

[node name="PlayButton" type="Button" parent="BlindUI/Control/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Play"

[node name="SortRank" type="Button" parent="BlindUI/Control/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Rank"

[node name="SortSuit" type="Button" parent="BlindUI/Control/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Suit"

[node name="DiscardButton" type="Button" parent="BlindUI/Control/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Discard"

[node name="HandType" type="Label" parent="BlindUI"]
unique_name_in_owner = true
offset_right = 40.0
offset_bottom = 23.0

[node name="Score" type="GridContainer" parent="BlindUI"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -35.0
offset_right = 46.0
offset_bottom = 15.0
grow_vertical = 2
script = ExtResource("6_n7sra")

[node name="TotalScore" type="Label" parent="BlindUI/Score"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="HBoxContainer" type="HBoxContainer" parent="BlindUI/Score"]
layout_mode = 2

[node name="Chips" type="Label" parent="BlindUI/Score/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "40"

[node name="x" type="Label" parent="BlindUI/Score/HBoxContainer"]
layout_mode = 2
text = "x"

[node name="Mult" type="Label" parent="BlindUI/Score/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "4"

[connection signal="pressed" from="BlindUI/Control/HBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="BlindUI/Control/HBoxContainer/DiscardButton" to="." method="_on_discard_button_pressed"]
